Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
10.2.3, 10.4.28
-
Ubuntu 16.04
Description
Build command:
cmake . -DCMAKE_BUILD_TYPE=Debug -DWITH_VALGRIND=1
make -j `cat /proc/cpuinfo | grep processor| wc -l`
./mtr encryption.innodb-discard-import got fails:
worker[1] Using MTR_BUILD_THREAD 300, with reserved ports 16000..16019
encryption.innodb-discard-import 'cbc,innodb' [ fail ]
Test ended at 2017-01-25 01:41:23
CURRENT_TEST: encryption.innodb-discard-import
— /u01/MariaDB/mysql-test/suite/encryption/r/innodb-discard-import.result 2017-01-25 00:54:30.909246787 +0800
+++ /u01/MariaDB/mysql-test/suite/encryption/r/innodb-discard-import.reject 2017-01-25 01:41:23.361297842 +0800
@@ -129,6 +129,6 @@
- t3 yes on expecting NOT FOUND
NOT FOUND /tmpres/ in t3.ibd - t4 yes on expecting NOT FOUND
-NOT FOUND /mysql/ in t4.ibd
+FOUND /mysql/ in t4.ibd
DROP PROCEDURE innodb_insert_proc;
DROP TABLE t1,t2,t3,t4;
Attachments
Issue Links
- relates to
-
MDEV-16116 encryption.innodb_encryption_discard_import still fails in buildbot with FOUND vs NOT FOUND
-
- Closed
-