MDEV-11905: encryption.innodb-discard-import test fails

Problem was that on import with buffered input/output
trim is not possible as we write several pages in
one write.